<resources>
    <string name="app_name">Week Planner</string>

    <!-- Fragment - Weeks -->
    <string name="fragment_weeks_empty_week_text">No tasks due this week</string>
    <string name="fragment_weeks_fab_content_description">Add new task</string>

    <!-- Bottom Sheet Dialog - Task Options -->
    <string name="bottom_sheet_dialog_task_options_complete_button">Complete</string>
    <string name="bottom_sheet_dialog_task_options_uncomplete_button">Uncomplete</string>
    <string name="bottom_sheet_dialog_task_options_procrastinate_button">Procrastinate</string>
    <string name="bottom_sheet_dialog_task_options_edit_button">Edit</string>
    <string name="bottom_sheet_dialog_task_options_delete_button">Delete</string>

    <!-- Fragment - Task Editor -->
    <string name="fragment_task_editor_name_til_hint">Name</string>
    <string name="fragment_task_editor_due_date_hint">Due Date</string>
    <string name="fragment_task_editor_info_hint">Extra Info</string>
    <string name="fragment_task_editor_add_button">Add New Task</string>
    <string name="fragment_task_editor_save_button">Save Task</string>

    <!-- Dialog - Task Due Week -->
    <string name="dialog_task_due_week_title">Select week</string>
    <string name="dialog_task_due_week_positive_button">OK</string>
    <string name="dialog_task_due_week_negative_button">Cancel</string>

</resources>